fixed whitespace

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,11 @@
 
 #navbar__logo {
     background-color: #ff8177;
-    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    background-image: linear-gradient(
+        to top,
+        #ff0844 0%,
+        #ffb199 100%
+        );
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -197,7 +201,7 @@
     }
 }
 
-/* Hero Section CSS*/
+/* Hero Section CSS */
 
 .main {
     background-color: #141414;
@@ -220,7 +224,11 @@
 .main__container h1 {
     font-size: 4rem;
     background-color: #ff8177;
-    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    background-image: linear-gradient(
+        to top, 
+        #ff0844 0%, 
+        #ffb199 100%
+        );
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -231,7 +239,11 @@
 .main__container h2 {
     font-size: 4rem;
     background-color: #ff8177;
-    background-image: linear-gradient(to top, #b721ff 0%, #21b4fd 100%);
+    background-image: linear-gradient(
+        to top, 
+        #b721ff 0%, 
+        #21b4fd 100%
+        );
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -248,7 +260,11 @@
 
 .main__btn {
     font-size: 1rem;
-    background-image: linear-gradient(to top, #f77062 0%, #fe51fe 100%);
+    background-image: linear-gradient(
+        to top, 
+        #f77062 0%, 
+        #fe51fe 100%
+        );
     padding: 14px 32px;
     border: none;
     border-radius: 4px;
@@ -391,10 +407,11 @@
     width: 400px;
     border-radius: 4px;
     background-image: linear-gradient(
-        to bottom,
-        rgba(0,0,0,0) 0%,
-        rgba(17,17,17,0.6) 100%
-    ), url('./images/pic3.jpg');
+            to bottom,
+            rgba(0,0,0,0) 0%,
+            rgba(17,17,17,0.6) 100%
+        ), 
+        url('./images/pic3.jpg');
     background-size: cover;
     position: relative;
     color: #fff;
@@ -402,11 +419,11 @@
 
 .services__card:nth-child(2) {
     background-image: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0) 0%,
-        rgba(17,17,17,0.6) 100%
-    ),
-    url("./images/pic2.jpg");
+            to bottom,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(17,17,17,0.6) 100%
+        ),
+        url("./images/pic2.jpg");
 }
 
 .services h2 {
@@ -415,7 +432,7 @@
     left: 30px;
 }
 
-.services p {
+.services_card p {
     position: absolute;
     top: 4000px;
     left: 30px;
